--- a/.github/workflows/issue-completeness.yml
+++ b/.github/workflows/issue-completeness.yml
@@ -29,12 +29,13 @@ jobs:
           prompt: |
             New issue was opened by ${{ github.event.issue.user.login }}
             Title: ${{ github.event.issue.title }}
+            Body:
+            ---
+            ${{ github.event.issue.body }}
+            ---
       - name: Comment results on the issue
         uses: peter-evans/create-or-update-comment@v4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           issue-number: ${{ github.event.issue.number }}
           body: ${{ steps.ai-response.outputs.response }}
-            ---
-            ${{ github.event.issue.body }}
-            ---
