Allow issue completeness check on updates

--- a/.github/workflows/issue-completeness.yml
+++ b/.github/workflows/issue-completeness.yml
@@ -2,7 +2,7 @@ name: Issue Completeness
 
 on:
   issues:
-    types: [opened]
+    types: [opened, updated]
 permissions:
   models: read
   issues: write
